--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2",
-    "uuid": "^8.2.0"
+    "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
